Predictive Maintenance : Multiclass classification using pytorch 2.0

--- a/predictive_maintenance.ipynb
+++ b/predictive_maintenance.ipynb
@@ -319,7 +319,8 @@
       "execution_count": 111,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Peb_wQ2bZBoD",
         "outputId": "9adcb86e-22c7-403c-e14c-897210f25c12"
@@ -602,7 +603,8 @@
       "execution_count": 113,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "k0YwW5g3p19-",
         "outputId": "0a52348f-c05d-416d-a2b7-0c191633469a"
@@ -651,7 +653,8 @@
       "execution_count": 114,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "eYobg6gqqukf",
         "outputId": "751473c8-4d35-45be-cb13-775ddd998139"
@@ -1465,7 +1468,8 @@
       "metadata": {
         "id": "uG5Oxn66uWUv",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "b1e52107-95a7-49ff-b82f-a6eef137f1bc"
       },
@@ -1767,7 +1771,8 @@
       "metadata": {
         "id": "ZyTUWmLBsjJn",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "7b0c04bd-3276-4c53-b7d3-7700484251df"
       },
@@ -1804,7 +1809,8 @@
       "metadata": {
         "id": "aLNpL09wuanX",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "782c96f8-f360-42a0-a60b-deb2eae60af1"
       },
@@ -1830,7 +1836,8 @@
       "metadata": {
         "id": "moUj9ZgFsmlI",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "b8abb727-1fa5-4d55-c0f9-b1321519f26f"
       },
@@ -1963,7 +1970,8 @@
       "metadata": {
         "id": "ZGt1gOYespv2",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "fa776ae0-d878-4d5b-fd87-9fae297af715"
       },
@@ -2001,7 +2009,8 @@
       "metadata": {
         "id": "Y4ZEoeQCsr0b",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "4196048a-99c0-4df1-bb25-76ba7680f4d6"
       },
@@ -2039,7 +2048,8 @@
       "metadata": {
         "id": "bauvpXa_st2t",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "2c99c7ad-a34d-470f-8f4a-235cadf8b68d"
       },
@@ -2065,7 +2075,8 @@
       "metadata": {
         "id": "v3QxH61AswH9",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "c1ee10b2-edc9-42fe-cb85-048dea63af1b"
       },
@@ -2141,7 +2152,8 @@
       "metadata": {
         "id": "3gIqDYInsyi4",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "eb01f163-ea77-4064-914a-8a1204fca7cf"
       },
@@ -2179,7 +2191,8 @@
       "metadata": {
         "id": "NmD2aHjus2y3",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "4716ea53-5861-49a9-b448-fe2e7a19c725"
       },
@@ -2217,7 +2230,8 @@
       "metadata": {
         "id": "o9rCrTEYs5YZ",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "21520865-f5a4-4e74-e30d-0e95ea4424b7"
       },
@@ -2243,7 +2257,8 @@
       "metadata": {
         "id": "RFSscsRPw2ug",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "77420e41-c059-4337-a342-393178a06712"
       },
@@ -2269,7 +2284,8 @@
       "metadata": {
         "id": "Q1IoKsaV7iM8",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "9411c1c5-6532-46a0-fa4e-16a5a2b5f8e7"
       },
@@ -2297,7 +2313,8 @@
       "metadata": {
         "id": "Ym-5zVths7tE",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "1fec0e76-de8f-4a72-92a4-952c23b92586"
       },
@@ -2323,7 +2340,8 @@
       "metadata": {
         "id": "CFxHbqhat2uR",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "ecfa6267-216b-44af-d5a0-af7ac481d8ba"
       },
@@ -2480,7 +2498,8 @@
       "metadata": {
         "id": "CXumep_Etqc5",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "3f239d65-6c31-4266-df89-cd9749fb205b"
       },
@@ -2639,7 +2658,8 @@
       "metadata": {
         "id": "pNMHjU-2x5Tt",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "83a84477-fe46-47ad-9dde-3c1e8d93f20f"
       },
